--- a/requirements.txt
+++ b/requirements.txt
@@ -40,7 +40,7 @@ jedi==0.13.1
 Jinja2==2.10
 kiwisolver==1.0.1
 lru-dict==1.1.6
-MarkupSafe==1.0
+# MarkupSafe==1.0
 matplotlib==3.0.2
 mccabe==0.6.1
 more-itertools==4.3.0
