--- a/requirements.txt
+++ b/requirements.txt
@@ -1,102 +1,37 @@
-alabaster==0.7.12
-apipkg==1.5
-argh==0.26.2
-atomicwrites==1.2.1
-attrdict==2.0.0
-attrs==18.2.0
-Babel==2.6.0
-backcall==0.1.0
-bitcoin==1.1.42
-bleach==3.0.2
-bumpversion==0.5.3
-certifi==2018.10.15
+allure-pytest==2.6.3
+allure-python-commons==2.6.3
+Appium-Python-Client==0.46
+atomicwrites==1.3.0
+attrs==20.3.0
+autopep8==1.5.7
+certifi==2019.3.9
 chardet==3.0.4
-colorama==0.4.0
-coverage==4.5.1
-cycler==0.10.0
-cytoolz==0.9.0.1
-decorator==4.3.0
-docopt==0.6.2
-docutils==0.14
-eth-abi==1.2.2
-eth-account==0.3.0
-eth-hash==0.2.0
-eth-keyfile==0.5.1
-eth-keys==0.2.0b3
-eth-rlp==0.1.2
-eth-typing==1.3.0
-eth-utils==1.2.2
-ethereum==2.3.2
-ethereum-input-decoder==0.2.2
-execnet==1.5.0
-flake8==3.4.1
-hexbytes==0.1.0
-hypothesis==3.56.5
-idna==2.7
-imagesize==1.1.0
-ipython==7.1.1
-ipython-genutils==0.2.0
-jedi==0.13.1
-Jinja2==2.10
-kiwisolver==1.0.1
-lru-dict==1.1.6
-# MarkupSafe==1.0
-matplotlib==3.0.2
-mccabe==0.6.1
-more-itertools==4.3.0
-numpy==1.15.3
-packaging==18.0
-parsimonious==0.8.1
-parso==0.3.1
-pathtools==0.1.2
-pbkdf2==1.3
-pickleshare==0.7.5
-pkginfo==1.4.2
-pluggy==0.8.0
-prompt-toolkit==2.0.7
-py==1.7.0
-py-ecc==1.4.3
-pycodestyle==2.3.1
-pycryptodome==3.6.6
-pyflakes==1.5.0
-Pygments==2.2.0
-pyparsing==2.3.0
-# pypiwin32==223
-pysha3==1.0.2
-pytest==4.0.1
-pytest-forked==0.2
-pytest-html==1.19.0
-pytest-metadata==1.7.0
-pytest-watch==4.2.0
-pytest-xdist==1.24.0
-python-dateutil==2.7.5
-pytz==2018.7
-pywin32==224
-pyyaml==4.2b4
-readme-renderer==24.0
-repoze.lru==0.7
-requests==2.20.0
-requests-toolbelt==0.8.0
-rlp==1.0.3
-scrypt==0.8.6
+colorama==0.4.1
+enum34==1.1.6
+idna==2.8
+importlib-metadata==4.0.1
+iniconfig==1.1.1
+kafka==1.3.5
+lxml==4.6.3
+more-itertools==7.0.0
+namedlist==1.7
+packaging==20.9
+pluggy==0.13.1
+py==1.10.0
+pycodestyle==2.7.0
+PyMySQL==0.9.3
+pyparsing==2.4.7
+pytest==6.2.4
+pytest-html==3.1.1
+pytest-metadata==1.11.0
+pytest-rerunfailures==9.1.1
+PyYAML==5.4.1
+requests==2.22.0
 selenium==3.141.0
-six==1.11.0
-snowballstemmer==1.2.1
-Sphinx==1.8.1
-sphinx-rtd-theme==0.4.2
-sphinxcontrib-websupport==1.1.0
-threadpool==1.3.2
-toolz==0.9.0
-tox==2.9.1
-tqdm==4.28.1
-traitlets==4.3.2
-twine==1.12.1
-urllib3==1.24
-virtualenv==16.1.0
-watchdog==0.9.0
+six==1.12.0
+suds-jurko==0.6
+toml==0.10.2
+typing-extensions==3.7.4.3
+urllib3==1.25.2
 wcwidth==0.1.7
-web3==4.7.2
-webencodings==0.5.1
-websockets==6.0
-PyYAML==4.2b4
-paramiko==2.4.2
+zipp==3.4.1
